--- a/project.html
+++ b/project.html
@@ -8,6 +8,170 @@
     <link rel="stylesheet" href="stylep.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
 </head>
+<style>
+    *
+{
+    padding: 0%;
+    margin: 0%;
+    box-sizing: border-box;
+}
+body
+{
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+    
+}
+header
+{
+    width: 100%;
+    height: 90vh;  
+    background-size: cover;
+    background-image: url(https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885__340.jpg);
+    background-attachment: fixed;
+}
+nav
+{
+    width: 100%;
+    height: 80px;
+    background-color: white;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 80px;
+    position: fixed;
+    top: 0;
+}
+.logo
+{
+    font-family: sans-serif;
+    font-size: 2cm;
+}
+.logo span
+{
+    color: red;
+}
+.menu a 
+{
+    text-decoration: none;
+    color: black;
+    padding: 10px 25px;
+    font-family: sans-serif;
+    font-size: 20px;
+    color: red;
+}
+.menu a :hover
+{
+    font-weight: bolder;
+}
+.icon i
+{
+    font-size: 20px;
+}
+.icon i :hover
+{
+    color: red;
+}
+.icon a
+{
+    text-decoration: none;
+    background-color: red;
+    color: white;
+    padding: 10px 25px;
+    margin-left: 30px;
+    border-radius: 5px;
+}
+.h-text
+{
+    color: white;
+    max-width: 700px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-align: center;
+}
+#camera
+{
+    font-size: 40px;
+    margin-bottom: 10px;
+}
+.h-text h1
+{
+    font-family: sans-serif;
+    font-size: 3em;
+    line-height: 1.5em;
+}
+.h-text input
+{
+    width: 60%;
+    padding: 20px;
+    border: none;
+    outline: none;
+    font-size: 20px;
+    border-radius: 8px;
+}
+.h-text button
+{
+    width: 30%;
+    padding: 20px;
+    background: red;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    font-size: 20px;
+    margin-top: 30px;
+}
+.filter-gallery
+{
+    padding: 100px;
+    margin-bottom: 20px;
+}
+.portfolio-item ul li
+{
+    list-style: none;
+    display: inline-block;
+    margin: 20px 0px;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: sans-serif;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: 0.5s ease;
+    text-align: center;
+    align-items: center;
+}
+.portfolio-item ul li:hover
+{
+    color: white;
+    background: red;
+    border-radius: 8px;
+}
+li.active
+{
+    color: white;
+    background: red;
+    border-radius: 8px;
+}
+.portfolio-item
+{
+    width: 100%;   
+}
+.portfolio-item .item
+{
+    width: 360px;
+    height: 360px;
+    float: right;
+    margin-bottom: 20px;
+    margin-right: 20px;
+}
+.portfolio-item .item img
+{
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+}
+</style>
 <body>
     <header>
         <nav>
